tests-integration/tests/custom/semantic-errors/keyword-as-identifiers-01/stderr.expected
Error:
    model.eprime:1:6:
  |
1 | find bool: bool
  |      ^
Missing <identifier>

model.eprime:1:6:
  |
1 | find bool: bool
  |      ^
Missing :

model.eprime:1:10:
  |
1 | find bool: bool
  |          ^
Missing <identifier>

model.eprime:1:10:
  |
1 | find bool: bool
  |          ^
Missing ,


